full screen mode meant the background was no longer visible, have fixed bug by changing the implimentation of the background

--- a/copacetic/src/Components/MainPage/styles.css
+++ b/copacetic/src/Components/MainPage/styles.css
@@ -18,10 +18,17 @@
 	background-size: contain;
 }
 
-body.cuttle {
+#root.cuttle {
 	background: linear-gradient(-45deg, #f7c547, #e73c50, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
+}
+
+#root.cuthbert {
+	background-color: #21002F;
+	font-family: 'Arial Black';
+	color: #21002F;
+	position: relative;
 }
 
 .background.cuthbert {
@@ -33,9 +40,3 @@ body.cuttle {
 	background-size: 85%;
 }
 
-body.cuthbert {
-	background-color: #21002F;
-	font-family: 'Arial Black';
-	color: #21002F;
-	position: relative;
-}
